Modify project: Rename RestaurantMenu id name to restaurantMenuId